src/test/ui/regions/regions-early-bound-error-method.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/regions-early-bound-error-method.rs:30:9
   |
LL |         g2.get()
   |         ^^^^^^^^

error: unsatisfied lifetime constraints
  --> $DIR/regions-early-bound-error-method.rs:30:9
   |
LL | impl<'a> Box<'a> {
   |      -- lifetime `'a` defined here
LL |     fn or<'b,G:GetRef<'b>>(&self, g2: G) -> &'a isize {
   |           -- lifetime `'b` defined here
LL |         g2.get()
   |         ^^^^^^^^ argument requires that `'b` must outlive `'a`

error: aborting due to previous error

